--- a/SpotifyDashboard.Web/src/app/components/multi-list/multi-list.component.css
+++ b/SpotifyDashboard.Web/src/app/components/multi-list/multi-list.component.css
@@ -63,6 +63,7 @@
 .album-data {
     width: 60%;
     overflow-x: hidden;
+    text-wrap: nowrap;
     display: grid;
     text-align: left;
     height: 5vh;
@@ -111,6 +112,7 @@
     place-items: center;
     justify-content: space-evenly;
     overflow-x: hidden;
+    text-wrap: nowrap;
     cursor: pointer;
 }
 
